# OpenGLMiniRender

./: .gitignore  CMakeLists.txt
include/: Camera.h  Input.h  Mesh.h  Model.h  OpenGLMiniRender.h  Shader.h  Texture.h
shader/: fragment_shader.fs  gouraud_shader.fs  gouraud_shader.vs  lightFS_shader.fs  lightVS_shader.vs  vertex_shader.vs
src/: Camera.cpp  Input.cpp  Mesh.cpp  Model.cpp  OpenGLMiniRender.cpp  Shader.cpp  Texture.cpp  stb_image.cpp
